--- a/community-plus-portal/src/assets/css/index.css
+++ b/community-plus-portal/src/assets/css/index.css
@@ -68,6 +68,7 @@
   text-align: center;
   font-size: 12px;
   margin: 19px 4px 4px 3px;
+  user-select: none;
   padding: 0 5px;
   border-radius: 4px;
   background-color: rgba(0,0,0,0.1);
@@ -77,6 +78,7 @@
   height: 16px;
   width: 16px;
   margin: 12px 3px;
+  cursor: pointer;
 }
 .article-list-title {
   float: left;
