搭建通知中心微服务基础框架,优化文章页面评论功能

--- a/community-plus-portal/src/assets/css/index.css
+++ b/community-plus-portal/src/assets/css/index.css
@@ -1,3 +1,7 @@
+a {
+  text-decoration: none;
+}
+
 .index-box {
   margin: 40px 160px 100px 160px;
   color: #888888;
@@ -92,6 +96,9 @@
   overflow: hidden;
   text-overflow:ellipsis;
   white-space: nowrap;
+}
+.article-list-title a {
+  color: #888888;
 }
 .article-list-newFlag {
  display: inline-block;
